<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/tvProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/visionxt"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTeamMembers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_members"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProjectName" />

    <TextView
        android:id="@+id/tvRuvef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruvef"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvTeamMembers"
        app:layout_constraintTop_toBottomOf="@+id/tvTeamMembers" />


    <TextView
        android:id="@+id/tvRuvefUsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruvef_usn"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvRuvef"
        app:layout_constraintTop_toBottomOf="@+id/tvRuvef" />

    <TextView
        android:id="@+id/tvFaizan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faizan"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvRuvefUsn"
        app:layout_constraintTop_toBottomOf="@+id/tvRuvefUsn" />

    <TextView
        android:id="@+id/tvFaizanUsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruvef_usn"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvFaizan"
        app:layout_constraintTop_toBottomOf="@+id/tvFaizan" />

    <TextView
        android:id="@+id/tvChirag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chirag"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/tvFaizanUsn"
        app:layout_constraintTop_toBottomOf="@+id/tvFaizanUsn" />

    <TextView
        android:id="@+id/tvChiragUsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chirag_usn"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tvChirag"
        app:layout_constraintTop_toBottomOf="@+id/tvChirag" />

</androidx.constraintlayout.widget.ConstraintLayout>