<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".LauncherActivity">


    <Button
        android:id="@+id/btnEmergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/black"
        android:padding="24dp"
        android:text="@string/emergency_call"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="24dp"
        android:text="@string/camera"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/btnEmergency"
        app:layout_constraintStart_toStartOf="@+id/btnEmergency"
        app:layout_constraintTop_toBottomOf="@+id/btnEmergency" />


    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_no"
        android:padding="24dp"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>